--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.87.1",
     "@types/node": "^24.3.1",
     "autoprefixer": "^10.4.21",
+    "immer": "^10.1.3",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
