--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ venv/
 ENV/
 env/
 .venv
+*.pyc
+*.pyo
+*.pyd
 
 # Environment files - NEVER commit these!
 .env
@@ -76,3 +79,12 @@ frontend/build/
 tmp/
 temp/
 uploads/
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+*~
+
+# Process files
+*.pid
