--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ JWT_ALGORITHM=HS256
 JWT_EXPIRATION_HOURS=24
 
 # Groq API (Optional - set if you have a key)
-GROQ_API_KEY=
+GROQ_API_KEY=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
+GROQ_MODEL=groq/compound
 
 # CORS
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173
