🔒 Security: Remove API keys from git and enhance .gitignore
- Remove .env files containing GROQ API keys from git tracking
- Enhance .gitignore to prevent future commits of sensitive files
- Add comprehensive patterns for environment files and secrets
- Ensure API keys are never accidentally committed

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,18 @@ env/
 *.env
 !.env.example
 !.env.template
+backend/.env
+backend/.env.*
+frontend/.env
+frontend/.env.*
+deployment/**/.env
+deployment/**/.env.*
+
+# API Keys and Secrets (extra protection)
+**/api-keys.txt
+**/secrets.txt
+**/*secret*
+**/*key*.env
 
 # Database
 *.db
